My landing page

--- a/index.html
+++ b/index.html
@@ -2,18 +2,51 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My landing page</title>
-  <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-  <!-- We need this line below for responsiveness! -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SOAP</title>
+  <script src="https://kit.fontawesome.com/441002ba0f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <!-- code a Hero / Banner section -->
+  <div class="container">
+    <!-- code a Hero / Banner section -->
+    <div class="banner" style="background-image: url(images/soap.jpeg)">
+      <div class="banner-text">
+        <h2>buy this soap</h2>
+        <p>you are absolutely filthy, aren't you?</p>
+      </div>
+      <a href="#">BUY NOW</a>
+    </div>
 
-  <!-- code a "How it works" section -->
+    <!-- code a "How it works" section -->
+    <div class="how-it-works">
+      <div class="column">
+        <h3>LATHER</h3>
+        <p>Lather it up good and proper, just like mama used to make. You're <em>properly</em> filthy, aren't you? When was the last time-- actually, forget it - we don't want to know, just keep scrubbing until it feels like your skin is on fire. Then scrub some more.</p>
+        <i class="fa-solid fa-soap"></i>
+      </div>
+      <div class="column">
+        <h3>RINSE</h3>
+        <p>Rubbed yourself red raw? Good. About time, if we're being honest. You were absolutely <em>filthy</em>, weren't you? Time to wash it all off with some good old fashioned water. Remember water? Off to the showers with you, don't come back 'til you're prune as a loon.</p>
+        <i class="fa-solid fa-shower"></i>
+      </div>
+      <div class="column">
+        <h3>REPEAT</h3>
+        <p>Have you rinsed all the suds off? Did you watch with shame as all the rotten skin cells of your rank, putrid, <em><strong>filthy</strong></em> former self slowly circled the drain, before vanishing forever? Good! Now do it again.<br>Cretin.</p>
+        <i class="fa-solid fa-repeat"></i>
+      </div>
+    </div>
 
-  <!-- code a footer -->
-
+    <!-- code a footer -->
+    <div class="footer">
+      <div class="links">
+        <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-fw fa-github"></i></a>
+        <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
+      </div>
+      <p>This website was coded using human fingers.</p>
+    </div>
+  </div>
 </body>
 </html>
